fix align

--- a/css/signin.css
+++ b/css/signin.css
@@ -39,10 +39,3 @@ body {
   border-top-right-radius: 0;
 }
 
-#logbuttons{
-  margin-left: 50%;
-}
-
-.checkbox{
-    margin-left: 50%;
-}
